--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
   a,
   a:visited,
   a:hover {
-    color: teal;
+    color: rgb(17, 147, 246);
     text-decoration: none;
     border-bottom: 2px solid currentColor;
   }
@@ -70,7 +70,7 @@
   .footer-basic {
     padding:40px 0;
     background-color:black;
-    color:#0f7ce9;
+    color:rgb(17, 147, 246);
   }
   
   .footer-basic ul {
